[gd_scene load_steps=3 format=3 uid="uid://bjjy5evprjiks"]

[ext_resource type="Script" uid="uid://bjh6fj8c7awpt" path="res://weapons/claws.gd" id="1_kcmad"]
[ext_resource type="Texture2D" uid="uid://detrigj2ejk0n" path="res://icon.svg" id="2_kcmad"]

[node name="Claws" type="Node2D"]
script = ExtResource("1_kcmad")

[node name="Area2D" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
rotation = -1.5707964
polygon = PackedVector2Array(33, 12, 27, 37, 0, 45, -27, 37, -33, 12, -20, 25, 0, 27, 20, 25)

[node name="Icon" type="Sprite2D" parent="Area2D"]
modulate = Color(1, 0, 0, 1)
position = Vector2(35, 0)
scale = Vector2(0.1, 0.5)
texture = ExtResource("2_kcmad")

[node name="SwipeTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
